fix text wrapping

--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -295,6 +295,7 @@ $cart-view-width: 250px;
 
 .tooltip-inner {
   font-size: 1.6rem;
+  white-space: pre-wrap;
 }
 
 // Icon image
